// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course mutations addCourse creates a course full 1`] = `
Object {
  "addCourse": Object {
    "automatic_completions": false,
    "automatic_completions_eligible_for_ects": true,
    "completions_handled_by": Object {
      "id": "00000000-0000-0000-0000-000000000002",
    },
    "course_aliases": Array [
      Object {
        "course_code": "alias1",
        "id": Any<String>,
      },
    ],
    "course_translations": Array [
      Object {
        "description": "description_en_US",
        "id": Any<String>,
        "language": "en_US",
        "link": null,
        "name": "name_en_US",
      },
    ],
    "course_variants": Array [
      Object {
        "description": "variant1",
        "id": Any<String>,
        "slug": "variant1",
      },
    ],
    "ects": null,
    "end_date": null,
    "exercise_completions_needed": null,
    "has_certificate": false,
    "hidden": null,
    "id": Any<String>,
    "inherit_settings_from": Object {
      "id": "00000000-0000-0000-0000-000000000002",
    },
    "name": "new1",
    "open_university_registration_links": Array [],
    "order": null,
    "photo": Object {
      "compressed": StringContaining "webp",
      "compressed_mimetype": "image/webp",
      "id": Any<String>,
      "original": StringContaining "image.gif",
      "uncompressed": StringContaining "jpeg",
      "uncompressed_mimetype": "image/jpeg",
    },
    "points_needed": null,
    "promote": null,
    "slug": "new1",
    "start_date": "01/01/1900",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000101",
      },
    ],
    "support_email": null,
    "teacher_in_charge_email": "e@mail.com",
    "teacher_in_charge_name": "teacher",
    "tier": null,
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [
      Object {
        "id": Any<String>,
        "language": "en_US",
      },
    ],
  },
}
`;

exports[`Course mutations addCourse creates a course full 2`] = `
Object {
  "automatic_completions": false,
  "automatic_completions_eligible_for_ects": true,
  "completion_email_id": null,
  "completions_handled_by_id": "00000000-0000-0000-0000-000000000002",
  "created_at": Any<Date>,
  "ects": null,
  "end_date": null,
  "exercise_completions_needed": null,
  "has_certificate": false,
  "hidden": null,
  "id": Any<String>,
  "inherit_settings_from_id": "00000000-0000-0000-0000-000000000002",
  "name": "new1",
  "order": null,
  "owner_organization_id": null,
  "photo_id": Any<String>,
  "points_needed": null,
  "promote": null,
  "slug": "new1",
  "start_date": "01/01/1900",
  "start_point": null,
  "status": "Upcoming",
  "study_module_order": null,
  "study_module_start_point": null,
  "support_email": null,
  "teacher_in_charge_email": "e@mail.com",
  "teacher_in_charge_name": "teacher",
  "tier": null,
  "upcoming_active_link": false,
  "updated_at": Any<Date>,
}
`;

exports[`Course mutations addCourse creates a course with no course_translations 1`] = `
Object {
  "addCourse": Object {
    "automatic_completions": false,
    "automatic_completions_eligible_for_ects": true,
    "completions_handled_by": Object {
      "id": "00000000-0000-0000-0000-000000000002",
    },
    "course_aliases": Array [
      Object {
        "course_code": "alias1",
        "id": Any<String>,
      },
    ],
    "course_translations": Array [],
    "course_variants": Array [
      Object {
        "description": "variant1",
        "id": Any<String>,
        "slug": "variant1",
      },
    ],
    "ects": null,
    "end_date": null,
    "exercise_completions_needed": null,
    "has_certificate": false,
    "hidden": null,
    "id": Any<String>,
    "inherit_settings_from": Object {
      "id": "00000000-0000-0000-0000-000000000002",
    },
    "name": "new1",
    "open_university_registration_links": Array [],
    "order": null,
    "photo": Object {
      "compressed": StringContaining "webp",
      "compressed_mimetype": "image/webp",
      "id": Any<String>,
      "original": StringContaining "image.gif",
      "uncompressed": StringContaining "jpeg",
      "uncompressed_mimetype": "image/jpeg",
    },
    "points_needed": null,
    "promote": null,
    "slug": "new1",
    "start_date": "01/01/1900",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000101",
      },
    ],
    "support_email": null,
    "teacher_in_charge_email": "e@mail.com",
    "teacher_in_charge_name": "teacher",
    "tier": null,
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [
      Object {
        "id": Any<String>,
        "language": "en_US",
      },
    ],
  },
}
`;

exports[`Course mutations addCourse creates a course with no course_translations 2`] = `
Object {
  "automatic_completions": false,
  "automatic_completions_eligible_for_ects": true,
  "completion_email_id": null,
  "completions_handled_by_id": "00000000-0000-0000-0000-000000000002",
  "created_at": Any<Date>,
  "ects": null,
  "end_date": null,
  "exercise_completions_needed": null,
  "has_certificate": false,
  "hidden": null,
  "id": Any<String>,
  "inherit_settings_from_id": "00000000-0000-0000-0000-000000000002",
  "name": "new1",
  "order": null,
  "owner_organization_id": null,
  "photo_id": Any<String>,
  "points_needed": null,
  "promote": null,
  "slug": "new1",
  "start_date": "01/01/1900",
  "start_point": null,
  "status": "Upcoming",
  "study_module_order": null,
  "study_module_start_point": null,
  "support_email": null,
  "teacher_in_charge_email": "e@mail.com",
  "teacher_in_charge_name": "teacher",
  "tier": null,
  "upcoming_active_link": false,
  "updated_at": Any<Date>,
}
`;

exports[`Course mutations addCourse creates a course with no photo 1`] = `
Object {
  "addCourse": Object {
    "automatic_completions": false,
    "automatic_completions_eligible_for_ects": true,
    "completions_handled_by": Object {
      "id": "00000000-0000-0000-0000-000000000002",
    },
    "course_aliases": Array [
      Object {
        "course_code": "alias1",
        "id": Any<String>,
      },
    ],
    "course_translations": Array [
      Object {
        "description": "description_en_US",
        "id": Any<String>,
        "language": "en_US",
        "link": null,
        "name": "name_en_US",
      },
    ],
    "course_variants": Array [
      Object {
        "description": "variant1",
        "id": Any<String>,
        "slug": "variant1",
      },
    ],
    "ects": null,
    "end_date": null,
    "exercise_completions_needed": null,
    "has_certificate": false,
    "hidden": null,
    "id": Any<String>,
    "inherit_settings_from": Object {
      "id": "00000000-0000-0000-0000-000000000002",
    },
    "name": "new1",
    "open_university_registration_links": Array [],
    "order": null,
    "photo": null,
    "points_needed": null,
    "promote": null,
    "slug": "new1",
    "start_date": "01/01/1900",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000101",
      },
    ],
    "support_email": null,
    "teacher_in_charge_email": "e@mail.com",
    "teacher_in_charge_name": "teacher",
    "tier": null,
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [
      Object {
        "id": Any<String>,
        "language": "en_US",
      },
    ],
  },
}
`;

exports[`Course mutations addCourse creates a course with no photo 2`] = `
Object {
  "automatic_completions": false,
  "automatic_completions_eligible_for_ects": true,
  "completion_email_id": null,
  "completions_handled_by_id": "00000000-0000-0000-0000-000000000002",
  "created_at": Any<Date>,
  "ects": null,
  "end_date": null,
  "exercise_completions_needed": null,
  "has_certificate": false,
  "hidden": null,
  "id": Any<String>,
  "inherit_settings_from_id": "00000000-0000-0000-0000-000000000002",
  "name": "new1",
  "order": null,
  "owner_organization_id": null,
  "photo_id": null,
  "points_needed": null,
  "promote": null,
  "slug": "new1",
  "start_date": "01/01/1900",
  "start_point": null,
  "status": "Upcoming",
  "study_module_order": null,
  "study_module_start_point": null,
  "support_email": null,
  "teacher_in_charge_email": "e@mail.com",
  "teacher_in_charge_name": "teacher",
  "tier": null,
  "upcoming_active_link": false,
  "updated_at": Any<Date>,
}
`;

exports[`Course mutations addCourse creates a course with no study_modules 1`] = `
Object {
  "addCourse": Object {
    "automatic_completions": false,
    "automatic_completions_eligible_for_ects": true,
    "completions_handled_by": Object {
      "id": "00000000-0000-0000-0000-000000000002",
    },
    "course_aliases": Array [
      Object {
        "course_code": "alias1",
        "id": Any<String>,
      },
    ],
    "course_translations": Array [
      Object {
        "description": "description_en_US",
        "id": Any<String>,
        "language": "en_US",
        "link": null,
        "name": "name_en_US",
      },
    ],
    "course_variants": Array [
      Object {
        "description": "variant1",
        "id": Any<String>,
        "slug": "variant1",
      },
    ],
    "ects": null,
    "end_date": null,
    "exercise_completions_needed": null,
    "has_certificate": false,
    "hidden": null,
    "id": Any<String>,
    "inherit_settings_from": Object {
      "id": "00000000-0000-0000-0000-000000000002",
    },
    "name": "new1",
    "open_university_registration_links": Array [],
    "order": null,
    "photo": Object {
      "compressed": StringContaining "webp",
      "compressed_mimetype": "image/webp",
      "id": Any<String>,
      "original": StringContaining "image.gif",
      "uncompressed": StringContaining "jpeg",
      "uncompressed_mimetype": "image/jpeg",
    },
    "points_needed": null,
    "promote": null,
    "slug": "new1",
    "start_date": "01/01/1900",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [],
    "support_email": null,
    "teacher_in_charge_email": "e@mail.com",
    "teacher_in_charge_name": "teacher",
    "tier": null,
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [
      Object {
        "id": Any<String>,
        "language": "en_US",
      },
    ],
  },
}
`;

exports[`Course mutations addCourse creates a course with no study_modules 2`] = `
Object {
  "automatic_completions": false,
  "automatic_completions_eligible_for_ects": true,
  "completion_email_id": null,
  "completions_handled_by_id": "00000000-0000-0000-0000-000000000002",
  "created_at": Any<Date>,
  "ects": null,
  "end_date": null,
  "exercise_completions_needed": null,
  "has_certificate": false,
  "hidden": null,
  "id": Any<String>,
  "inherit_settings_from_id": "00000000-0000-0000-0000-000000000002",
  "name": "new1",
  "order": null,
  "owner_organization_id": null,
  "photo_id": Any<String>,
  "points_needed": null,
  "promote": null,
  "slug": "new1",
  "start_date": "01/01/1900",
  "start_point": null,
  "status": "Upcoming",
  "study_module_order": null,
  "study_module_start_point": null,
  "support_email": null,
  "teacher_in_charge_email": "e@mail.com",
  "teacher_in_charge_name": "teacher",
  "tier": null,
  "upcoming_active_link": false,
  "updated_at": Any<Date>,
}
`;

exports[`Course mutations deleteCourse deletes course on id 1`] = `
Object {
  "deleteCourse": Object {
    "id": "00000000-0000-0000-0000-000000000002",
  },
}
`;

exports[`Course mutations deleteCourse deletes course on slug 1`] = `
Object {
  "deleteCourse": Object {
    "id": "00000000-0000-0000-0000-000000000002",
  },
}
`;

exports[`Course mutations updateCourse deletes photo 1`] = `
Object {
  "updateCourse": Object {
    "automatic_completions": true,
    "automatic_completions_eligible_for_ects": true,
    "completions_handled_by": Object {
      "id": "00000000-0000-0000-0000-000000000001",
    },
    "course_aliases": Array [
      Object {
        "course_code": "alias1",
        "id": Any<String>,
      },
    ],
    "course_translations": Array [
      Object {
        "description": "course1_added_description_se_SE",
        "id": Any<String>,
        "language": "se_SE",
        "link": "http:/link.se.com",
        "name": "course1_se_SE",
      },
      Object {
        "description": "course1_updated_description_en_US",
        "id": Any<String>,
        "language": "en_US",
        "link": "http://link.com",
        "name": "course1_en_US",
      },
    ],
    "course_variants": Array [
      Object {
        "description": "variant1",
        "id": Any<String>,
        "slug": "variant1",
      },
    ],
    "ects": null,
    "end_date": "12/30/2100",
    "exercise_completions_needed": 1,
    "has_certificate": false,
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000002",
    "inherit_settings_from": Object {
      "id": "00000000-0000-0000-0000-000000000001",
    },
    "name": "updated course1",
    "open_university_registration_links": Array [
      Object {
        "course_code": "alias",
        "id": "e3eea9b5-1ff1-47f8-94f4-269c7a092d93",
        "language": "en_US",
        "link": "avoin-link",
      },
    ],
    "order": null,
    "photo": null,
    "points_needed": 3,
    "promote": null,
    "slug": "course1",
    "start_date": "02/01/1900",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": StringMatching /00000000-0000-0000-0000-000000000101/,
      },
    ],
    "support_email": null,
    "teacher_in_charge_email": "updated-e@mail.com",
    "teacher_in_charge_name": "updated teacher",
    "tier": null,
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [
      Object {
        "id": Any<String>,
        "language": "en_US",
      },
    ],
  },
}
`;

exports[`Course mutations updateCourse deletes photo 2`] = `
Object {
  "automatic_completions": true,
  "automatic_completions_eligible_for_ects": true,
  "completion_email_id": null,
  "completions_handled_by_id": "00000000-0000-0000-0000-000000000001",
  "created_at": Any<Date>,
  "ects": null,
  "end_date": "12/30/2100",
  "exercise_completions_needed": 1,
  "has_certificate": false,
  "hidden": null,
  "id": "00000000-0000-0000-0000-000000000002",
  "inherit_settings_from_id": "00000000-0000-0000-0000-000000000001",
  "name": "updated course1",
  "order": null,
  "owner_organization_id": null,
  "photo_id": null,
  "points_needed": 3,
  "promote": null,
  "slug": "course1",
  "start_date": "02/01/1900",
  "start_point": null,
  "status": "Upcoming",
  "study_module_order": null,
  "study_module_start_point": null,
  "support_email": null,
  "teacher_in_charge_email": "updated-e@mail.com",
  "teacher_in_charge_name": "updated teacher",
  "tier": null,
  "upcoming_active_link": false,
  "updated_at": Any<Date>,
}
`;

exports[`Course mutations updateCourse updates course 1`] = `
Object {
  "updateCourse": Object {
    "automatic_completions": true,
    "automatic_completions_eligible_for_ects": true,
    "completions_handled_by": Object {
      "id": "00000000-0000-0000-0000-000000000001",
    },
    "course_aliases": Array [
      Object {
        "course_code": "alias1",
        "id": Any<String>,
      },
    ],
    "course_translations": Array [
      Object {
        "description": "course1_added_description_se_SE",
        "id": Any<String>,
        "language": "se_SE",
        "link": "http:/link.se.com",
        "name": "course1_se_SE",
      },
      Object {
        "description": "course1_updated_description_en_US",
        "id": Any<String>,
        "language": "en_US",
        "link": "http://link.com",
        "name": "course1_en_US",
      },
    ],
    "course_variants": Array [
      Object {
        "description": "variant1",
        "id": Any<String>,
        "slug": "variant1",
      },
    ],
    "ects": null,
    "end_date": "12/30/2100",
    "exercise_completions_needed": 1,
    "has_certificate": false,
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000002",
    "inherit_settings_from": Object {
      "id": "00000000-0000-0000-0000-000000000001",
    },
    "name": "updated course1",
    "open_university_registration_links": Array [
      Object {
        "course_code": "alias",
        "id": "e3eea9b5-1ff1-47f8-94f4-269c7a092d93",
        "language": "en_US",
        "link": "avoin-link",
      },
    ],
    "order": null,
    "photo": Object {
      "compressed": StringContaining "webp",
      "compressed_mimetype": "image/webp",
      "id": Any<String>,
      "original": StringContaining "original.gif",
      "uncompressed": StringContaining "jpeg",
      "uncompressed_mimetype": "image/jpeg",
    },
    "points_needed": 3,
    "promote": null,
    "slug": "updated_course1",
    "start_date": "02/01/1900",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": StringMatching /00000000-0000-0000-0000-000000000101/,
      },
    ],
    "support_email": null,
    "teacher_in_charge_email": "updated-e@mail.com",
    "teacher_in_charge_name": "updated teacher",
    "tier": null,
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [
      Object {
        "id": Any<String>,
        "language": "en_US",
      },
    ],
  },
}
`;

exports[`Course mutations updateCourse updates course 2`] = `
Object {
  "automatic_completions": true,
  "automatic_completions_eligible_for_ects": true,
  "completion_email_id": null,
  "completions_handled_by_id": "00000000-0000-0000-0000-000000000001",
  "created_at": Any<Date>,
  "ects": null,
  "end_date": "12/30/2100",
  "exercise_completions_needed": 1,
  "has_certificate": false,
  "hidden": null,
  "id": "00000000-0000-0000-0000-000000000002",
  "inherit_settings_from_id": "00000000-0000-0000-0000-000000000001",
  "name": "updated course1",
  "order": null,
  "owner_organization_id": null,
  "photo_id": Any<String>,
  "points_needed": 3,
  "promote": null,
  "slug": "updated_course1",
  "start_date": "02/01/1900",
  "start_point": null,
  "status": "Upcoming",
  "study_module_order": null,
  "study_module_start_point": null,
  "support_email": null,
  "teacher_in_charge_email": "updated-e@mail.com",
  "teacher_in_charge_name": "updated teacher",
  "tier": null,
  "upcoming_active_link": false,
  "updated_at": Any<Date>,
}
`;

exports[`Course mutations updateCourse updates photo 1`] = `
Object {
  "updateCourse": Object {
    "automatic_completions": true,
    "automatic_completions_eligible_for_ects": true,
    "completions_handled_by": Object {
      "id": "00000000-0000-0000-0000-000000000001",
    },
    "course_aliases": Array [
      Object {
        "course_code": "alias1",
        "id": Any<String>,
      },
    ],
    "course_translations": Array [
      Object {
        "description": "course1_added_description_se_SE",
        "id": Any<String>,
        "language": "se_SE",
        "link": "http:/link.se.com",
        "name": "course1_se_SE",
      },
      Object {
        "description": "course1_updated_description_en_US",
        "id": Any<String>,
        "language": "en_US",
        "link": "http://link.com",
        "name": "course1_en_US",
      },
    ],
    "course_variants": Array [
      Object {
        "description": "variant1",
        "id": Any<String>,
        "slug": "variant1",
      },
    ],
    "ects": null,
    "end_date": "12/30/2100",
    "exercise_completions_needed": 1,
    "has_certificate": false,
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000002",
    "inherit_settings_from": Object {
      "id": "00000000-0000-0000-0000-000000000001",
    },
    "name": "updated course1",
    "open_university_registration_links": Array [
      Object {
        "course_code": "alias",
        "id": "e3eea9b5-1ff1-47f8-94f4-269c7a092d93",
        "language": "en_US",
        "link": "avoin-link",
      },
    ],
    "order": null,
    "photo": Object {
      "compressed": StringContaining "webp",
      "compressed_mimetype": "image/webp",
      "id": Any<String>,
      "original": StringContaining "image.gif",
      "uncompressed": StringContaining "jpeg",
      "uncompressed_mimetype": "image/jpeg",
    },
    "points_needed": 3,
    "promote": null,
    "slug": "updated_course1",
    "start_date": "02/01/1900",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": StringMatching /00000000-0000-0000-0000-000000000101/,
      },
    ],
    "support_email": null,
    "teacher_in_charge_email": "updated-e@mail.com",
    "teacher_in_charge_name": "updated teacher",
    "tier": null,
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [
      Object {
        "id": Any<String>,
        "language": "en_US",
      },
    ],
  },
}
`;

exports[`Course mutations updateCourse updates photo 2`] = `
Object {
  "automatic_completions": true,
  "automatic_completions_eligible_for_ects": true,
  "completion_email_id": null,
  "completions_handled_by_id": "00000000-0000-0000-0000-000000000001",
  "created_at": Any<Date>,
  "ects": null,
  "end_date": "12/30/2100",
  "exercise_completions_needed": 1,
  "has_certificate": false,
  "hidden": null,
  "id": "00000000-0000-0000-0000-000000000002",
  "inherit_settings_from_id": "00000000-0000-0000-0000-000000000001",
  "name": "updated course1",
  "order": null,
  "owner_organization_id": null,
  "photo_id": Any<String>,
  "points_needed": 3,
  "promote": null,
  "slug": "updated_course1",
  "start_date": "02/01/1900",
  "start_point": null,
  "status": "Upcoming",
  "study_module_order": null,
  "study_module_start_point": null,
  "support_email": null,
  "teacher_in_charge_email": "updated-e@mail.com",
  "teacher_in_charge_name": "updated teacher",
  "tier": null,
  "upcoming_active_link": false,
  "updated_at": Any<Date>,
}
`;

exports[`Course queries course admin returns full course on id and slug 1`] = `
Object {
  "automatic_completions": true,
  "automatic_completions_eligible_for_ects": true,
  "completions_handled_by": null,
  "course_aliases": Array [
    Object {
      "course_code": "alias",
      "id": "67000000-0000-0000-0000-000000000001",
    },
  ],
  "course_translations": Array [
    Object {
      "description": "course1_description_en_US",
      "id": "00000000-0000-0000-0000-000000000011",
      "language": "en_US",
      "link": "http://link.com",
      "name": "course1_en_US",
    },
    Object {
      "description": "course1_description_fi_FI",
      "id": "00000000-0000-0000-0000-000000000012",
      "language": "fi_FI",
      "link": "http:/link.fi.com",
      "name": "course1_fi_FI",
    },
  ],
  "course_variants": Array [],
  "ects": null,
  "end_date": "12/31/2100",
  "exercise_completions_needed": 1,
  "has_certificate": false,
  "hidden": null,
  "id": Any<String>,
  "inherit_settings_from": null,
  "name": "course1",
  "open_university_registration_links": Array [
    Object {
      "course_code": "alias",
      "id": "e3eea9b5-1ff1-47f8-94f4-269c7a092d93",
      "language": "en_US",
      "link": "avoin-link",
    },
  ],
  "order": null,
  "photo": Object {
    "compressed": "webp",
    "compressed_mimetype": "image/webp",
    "id": "00000000-0000-0000-0000-000000001101",
    "uncompressed": "jpeg",
    "uncompressed_mimetype": "image/jpeg",
  },
  "points_needed": 3,
  "promote": null,
  "slug": "course1",
  "start_date": "01/01/1900",
  "start_point": null,
  "status": "Upcoming",
  "study_module_order": null,
  "study_module_start_point": null,
  "study_modules": Array [
    Object {
      "id": "00000000-0000-0000-0000-000000000101",
    },
    Object {
      "id": "00000000-0000-0000-0000-000000000102",
    },
  ],
  "support_email": null,
  "teacher_in_charge_email": "e@mail.com",
  "teacher_in_charge_name": "teacher1",
  "tier": null,
  "upcoming_active_link": false,
  "user_course_settings_visibilities": Array [],
}
`;

exports[`Course queries course admin returns full course on id and slug 2`] = `
Object {
  "automatic_completions": true,
  "automatic_completions_eligible_for_ects": true,
  "completions_handled_by": null,
  "course_aliases": Array [
    Object {
      "course_code": "alias",
      "id": "67000000-0000-0000-0000-000000000001",
    },
  ],
  "course_translations": Array [
    Object {
      "description": "course1_description_en_US",
      "id": "00000000-0000-0000-0000-000000000011",
      "language": "en_US",
      "link": "http://link.com",
      "name": "course1_en_US",
    },
    Object {
      "description": "course1_description_fi_FI",
      "id": "00000000-0000-0000-0000-000000000012",
      "language": "fi_FI",
      "link": "http:/link.fi.com",
      "name": "course1_fi_FI",
    },
  ],
  "course_variants": Array [],
  "ects": null,
  "end_date": "12/31/2100",
  "exercise_completions_needed": 1,
  "has_certificate": false,
  "hidden": null,
  "id": Any<String>,
  "inherit_settings_from": null,
  "name": "course1",
  "open_university_registration_links": Array [
    Object {
      "course_code": "alias",
      "id": "e3eea9b5-1ff1-47f8-94f4-269c7a092d93",
      "language": "en_US",
      "link": "avoin-link",
    },
  ],
  "order": null,
  "photo": Object {
    "compressed": "webp",
    "compressed_mimetype": "image/webp",
    "id": "00000000-0000-0000-0000-000000001101",
    "uncompressed": "jpeg",
    "uncompressed_mimetype": "image/jpeg",
  },
  "points_needed": 3,
  "promote": null,
  "slug": "course1",
  "start_date": "01/01/1900",
  "start_point": null,
  "status": "Upcoming",
  "study_module_order": null,
  "study_module_start_point": null,
  "study_modules": Array [
    Object {
      "id": "00000000-0000-0000-0000-000000000101",
    },
    Object {
      "id": "00000000-0000-0000-0000-000000000102",
    },
  ],
  "support_email": null,
  "teacher_in_charge_email": "e@mail.com",
  "teacher_in_charge_name": "teacher1",
  "tier": null,
  "upcoming_active_link": false,
  "user_course_settings_visibilities": Array [],
}
`;

exports[`Course queries course normal user returns correct language 1`] = `
Object {
  "description": "course1_description_en_US",
  "id": Any<String>,
  "link": "http://link.com",
  "name": "course1_en_US",
  "slug": "course1",
}
`;

exports[`Course queries course normal user returns course on id and slug 1`] = `
Object {
  "description": "",
  "id": Any<String>,
  "link": "",
  "name": "course1",
  "slug": "course1",
}
`;

exports[`Course queries course normal user returns course on id and slug 2`] = `
Object {
  "description": "",
  "id": Any<String>,
  "link": "",
  "name": "course1",
  "slug": "course1",
}
`;

exports[`Course queries courses returns courses 1`] = `
Array [
  Object {
    "course_translations": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000022",
        "language": "fi_FI",
        "name": "course2_fi_FI",
      },
    ],
    "description": "",
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000001",
    "link": "",
    "name": "course2",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "course2",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000102",
        "slug": "module1",
      },
    ],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000011",
        "language": "en_US",
        "name": "course1_en_US",
      },
      Object {
        "id": "00000000-0000-0000-0000-000000000012",
        "language": "fi_FI",
        "name": "course1_fi_FI",
      },
    ],
    "description": "",
    "hidden": null,
    "id": "00000000-0000-0000-0000-000000000002",
    "link": "",
    "name": "course1",
    "order": null,
    "photo": Object {
      "compressed": "webp",
      "id": "00000000-0000-0000-0000-000000001101",
      "uncompressed": "jpeg",
    },
    "promote": null,
    "slug": "course1",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000101",
        "slug": "module2",
      },
      Object {
        "id": "00000000-0000-0000-0000-000000000102",
        "slug": "module1",
      },
    ],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [],
    "description": "",
    "hidden": false,
    "id": "00000000-0000-0000-0000-000000000666",
    "link": "",
    "name": "handler",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "handler",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
  Object {
    "course_translations": Array [],
    "description": "",
    "hidden": true,
    "id": "00000000-0000-0000-0000-000000000667",
    "link": "",
    "name": "handled",
    "order": null,
    "photo": null,
    "promote": null,
    "slug": "handled",
    "start_point": null,
    "status": "Upcoming",
    "study_module_order": null,
    "study_module_start_point": null,
    "study_modules": Array [],
    "upcoming_active_link": false,
    "user_course_settings_visibilities": Array [],
  },
]
`;

exports[`Course queries handlerCourses returns correctly 1`] = `
Array [
  Object {
    "handles_completions_for": Array [
      Object {
        "id": "00000000-0000-0000-0000-000000000667",
      },
    ],
    "id": "00000000-0000-0000-0000-000000000666",
  },
]
`;
